// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render Radio button 1`] = `
<div>
  <div
    class="radio"
  >
    <input
      class="radio__button"
      id="radioButton1"
      name="radioGroup"
      readonly=""
      type="radio"
      value="Value"
    />
    <label
      class="radio__label"
      for="radioButton1"
    >
      Radio button
    </label>
  </div>
</div>
`;

exports[`Radio should render Radio with custom className values 1`] = `
<div>
  <div
    class="radio custom-class-name"
  >
    <input
      class="radio__button custom-class-name"
      id="radioButton3"
      name="radioGroup"
      readonly=""
      type="radio"
      value="Value"
    />
    <label
      class="radio__label custom-class-name"
      for="radioButton3"
    >
      Radio button
    </label>
  </div>
</div>
`;

exports[`Radio should render checked Radio button 1`] = `
<div>
  <div
    class="radio"
  >
    <input
      checked=""
      class="radio__button"
      id="radioButton2"
      name="radioGroup"
      readonly=""
      type="radio"
      value="Value"
    />
    <label
      class="radio__label"
      for="radioButton2"
    >
      Radio button
    </label>
  </div>
</div>
`;

exports[`Radio should render disabled Radio button 1`] = `
<div>
  <div
    class="radio"
  >
    <input
      class="radio__button"
      disabled=""
      id="radioButton3"
      name="radioGroup"
      readonly=""
      type="radio"
      value="Value"
    />
    <label
      class="radio__label"
      for="radioButton3"
    >
      Radio button
    </label>
  </div>
</div>
`;
